# wallet_django

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
app/api/v1/wallets/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
